# documind-rag

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  EVAL.md  Makefile  README.md  RESUME.md  docker-compose.yml  pyproject.toml  requirements.txt  start-web.sh
.github/workflows/: ci.yml  eval.yml  smoke.yml
.streamlit/: config.toml
deploy/hf-spaces/: Dockerfile  README_SPACE.md  start.sh
deploy/hf-spaces-static/: README.md  index.html
deploy/hf-spaces-static/static/: styles.css
deploy/hf-spaces-static/static/js/: app.js  chunker.js  llm.js  pdf.js  rag-pipeline.js  store.js
eval/: sample_dataset.json
eval/datasets/: realistic.json
scripts/: smoke_webapp.py
src/documind/: __init__.py  app.py  config.py  evaluate.py  evaluation.py  history.py  ingestion.py  llm.py  pipeline.py  reranker.py  summary.py  vectorstore.py  webapp.py
src/documind/webapp/static/: app.js  index.html
src/documind/webapp/static/js/: rag-pipeline.js
tests/: test_config.py  test_evaluation.py  test_history.py  test_ingestion.py  test_pipeline.py  test_security.py  test_smoke_script.py  test_static_chunker.js  test_summary.py  test_vectorstore.py  test_webapp.py
